@@ -8,8 +8,8 @@ package saicontella.phex.stdownload;
  * February 2008
  */
 
-import java.awt.Component;
-import java.awt.Dimension;
+import java.awt.*;
+import java.awt.datatransfer.StringSelection;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.KeyEvent;
@@ -17,24 +17,53 @@ import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
 import java.io.File;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Collection;
 
 import javax.swing.*;
 import javax.swing.event.ListSelectionEvent;
 import javax.swing.event.ListSelectionListener;
 
-import phex.common.ThreadPool;
+import phex.common.Environment;
+import phex.common.URN;
+import phex.common.address.DestAddress;
 import phex.common.format.NumberFormatUtils;
+import phex.common.log.LogBuffer;
+import phex.common.log.LogRecord;
 import phex.common.log.NLogger;
+import phex.download.strategy.AvailBeginRandSelectionStrategy;
+import phex.download.strategy.BeginAvailRandSelectionStrategy;
+import phex.download.strategy.BeginEndAvailRandSelectionStrategy;
+import phex.download.strategy.RandomScopeSelectionStrategy;
+import phex.download.strategy.ScopeSelectionStrategy;
+import phex.download.strategy.ScopeSelectionStrategyProvider;
+import phex.download.swarming.SWDownloadCandidate;
 import phex.download.swarming.SWDownloadFile;
 import phex.download.swarming.SwarmingManager;
+import phex.gui.actions.BanHostActionUtils;
 import phex.gui.actions.FWAction;
-import phex.gui.common.*;
+import phex.gui.actions.FWToggleAction;
+import phex.gui.actions.GUIActionPerformer;
+import phex.gui.common.BrowserLauncher;
+import phex.gui.common.FWElegantPanel;
+import phex.gui.common.FWMenu;
+import phex.gui.common.FWToolBar;
+import phex.gui.common.GUIRegistry;
+import phex.gui.common.GUIUtils;
+import phex.gui.common.IconPack;
+import phex.gui.common.MainFrame;
 import phex.gui.common.table.FWSortedTableModel;
 import phex.gui.common.table.FWTable;
+import phex.gui.dialogs.DownloadConfigDialog;
+import phex.gui.dialogs.LogBufferDialog;
 import phex.gui.tabs.FWTab;
+import phex.prefs.core.BandwidthPrefs;
+import phex.prefs.core.DownloadPrefs;
 import phex.query.ResearchSetting;
+import phex.utils.SystemShellExecute;
+import phex.utils.URLUtil;
 import phex.xml.sax.gui.DGuiSettings;
 import phex.xml.sax.gui.DTable;
 import saicontella.phex.STFWElegantPanel;
@@ -52,10 +81,13 @@ import org.jdesktop.jdic.desktop.DesktopException;
 public class STSWDownloadTab extends FWTab
 {
     private static final String DOWNLOAD_TABLE_IDENTIFIER = "DownloadTable";
+    private static final String CANDIDATE_TABLE_IDENTIFIER = "CandidateTable";
     private static final SWDownloadFile[] EMPTY_DOWNLOADFILE_ARRAY =
         new SWDownloadFile[0];
+    private static final SWDownloadCandidate[] EMPTY_DOWNLOADCANDIDATE_ARRAY =
+        new SWDownloadCandidate[0];
 
-    private SwarmingManager swarmingMgr;
+    private final SwarmingManager downloadService;
 
     private FWTable downloadTable;
     private JScrollPane downloadTableScrollPane;
@@ -63,15 +95,33 @@ public class STSWDownloadTab extends FWTab
 
     private JTabbedPane downloadDetails;
     private JPopupMenu downloadPopup;
+    private JMenu downloadPopupSpeedMenu;
+    
+    private FWElegantPanel overviewElegantPanel;
+    private STDownloadOverviewPanel downloadOverviewPanel;
+    
+    private FWElegantPanel transfersElegantPanel;
+    private STDownloadTransfersPanel transfersPanel;
 
-    public STSWDownloadTab( )
+    private PanelBuilder candidatePanelBuilder;
+    private FWElegantPanel candidateElegantPanel;
+    private FWTable candidateTable;
+    private JScrollPane candidateTableScrollPane;
+    private STSWCandidateTableModel candidateModel;
+    private JPopupMenu candidatePopup;
+    
+    public STSWDownloadTab( SwarmingManager downloadService )
     {
         super( MainFrame.DOWNLOAD_TAB_ID, STLocalizer.getString( "Download" ),
             GUIRegistry.getInstance().getPlafIconPack().getIcon( "Download.Tab" ),
             STLocalizer.getString( "TTTDownloadTab" ),STLocalizer.getChar(
             "DownloadMnemonic"), KeyStroke.getKeyStroke( STLocalizer.getString(
             "DownloadAccelerator" ) ), MainFrame.DOWNLOAD_TAB_INDEX );
-        swarmingMgr = SwarmingManager.getInstance();
+        if ( downloadService == null )
+        {
+            throw new NullPointerException( "DownloadService missing" );
+        }
+        this.downloadService = downloadService;
     }
 
     public void initComponent( DGuiSettings guiSettings )
@@ -84,19 +134,29 @@ public class STSWDownloadTab extends FWTab
         PanelBuilder tabBuilder = new PanelBuilder( layout, this );
 
         JPanel downloadTablePanel = initDownloadTablePanel( guiSettings, mouseHandler );
-
+        initDownloadOverviewPanel( );
+        JPanel downloadCandidatePanel = initDownloadCandidatePanel(guiSettings, mouseHandler);
+        initDownloadTransferPanel( guiSettings );
+        
+        
         downloadDetails = new JTabbedPane( JTabbedPane.BOTTOM );
         downloadDetails.putClientProperty(Options.EMBEDDED_TABS_KEY, Boolean.TRUE);
         downloadDetails.setBorder( BorderFactory.createEmptyBorder( 2, 0, 0, 0) );
+        downloadDetails.addTab( STLocalizer.getString( "DownloadTab_Overview" ),
+            overviewElegantPanel );
+        downloadDetails.addTab( STLocalizer.getString( "DownloadTab_Transfers"),
+            transfersElegantPanel );
+        downloadDetails.addTab( STLocalizer.getString( "Candidates"),
+            downloadCandidatePanel );
 
         // Workaround for very strange j2se 1.4 split pane layout behavior
         Dimension dim = new Dimension( 400, 400 );
         downloadTablePanel.setPreferredSize( dim );
         downloadDetails.setPreferredSize( dim );
-        dim = new Dimension( 0, 0 );        
+        dim = new Dimension( 0, 0 );
         downloadTablePanel.setMinimumSize( dim );
         downloadDetails.setMinimumSize( dim );
-
+        
 
         JSplitPane splitPane = new JSplitPane( JSplitPane.VERTICAL_SPLIT, downloadTablePanel,
             null );
@@ -112,8 +172,10 @@ public class STSWDownloadTab extends FWTab
 
         // increase table height a bit to display progress bar string better...
         GUIUtils.adjustTableProgresssBarHeight( downloadTable );
+        //GUIUtils.adjustTableProgresssBarHeight( candidateTable );
 
-
+        //mDownloadMgr.addDownloadFilesChangeListener( new DownloadFilesChangeHandler() );
+        
         ActionListener updateDownloadFileInfoAction = new ActionListener()
         {
             public void actionPerformed( ActionEvent e )
@@ -124,23 +186,127 @@ public class STSWDownloadTab extends FWTab
         GUIRegistry.getInstance().getGuiUpdateTimer().addActionListener(
             updateDownloadFileInfoAction );
     }
+    
+    private void initDownloadOverviewPanel()
+    {
+        downloadOverviewPanel = new STDownloadOverviewPanel();
+        downloadOverviewPanel.initializeComponent( null );
+        overviewElegantPanel = new FWElegantPanel( STLocalizer.getString("DownloadTab_DownloadOverview"),
+            downloadOverviewPanel );
+    }
+    
+    private void initDownloadTransferPanel( DGuiSettings guiSettings )
+    {
+        transfersPanel = new STDownloadTransfersPanel();
+        transfersPanel.initializeComponent( guiSettings );
+        transfersElegantPanel = new FWElegantPanel( STLocalizer.getString("DownloadTab_DownloadTransfers"),
+            transfersPanel );
+    }
 
-
+    private JPanel initDownloadCandidatePanel(
+        DGuiSettings guiSettings,
+        MouseHandler mouseHandler)
+    {
+        JPanel downloadCandidatePanel = new JPanel( );
+        
+        CellConstraints cc = new CellConstraints();
+        FormLayout layout = new FormLayout(
+            "fill:d:grow", // columns
+            "fill:d:grow, 1dlu, p"); //rows
+        candidatePanelBuilder = new PanelBuilder( layout, downloadCandidatePanel );
+        
+        candidateModel = new STSWCandidateTableModel( downloadTable, downloadService );
+        candidateTable = new FWTable( new FWSortedTableModel( candidateModel ) );
+        GUIUtils.updateTableFromDGuiSettings( guiSettings, candidateTable, 
+            CANDIDATE_TABLE_IDENTIFIER );
+        
+        candidateTable.activateAllHeaderActions();
+        candidateTable.getSelectionModel().addListSelectionListener(
+            new CandidateSelectionHandler() );
+        candidateTable.setAutoResizeMode( JTable.AUTO_RESIZE_OFF );
+        candidateTable.addMouseListener( mouseHandler );
+        GUIRegistry.getInstance().getGuiUpdateTimer().addTable( candidateTable );
+        candidateTableScrollPane = FWTable.createFWTableScrollPane( candidateTable );
+        candidateTableScrollPane.addMouseListener( mouseHandler );
+        candidatePanelBuilder.add( candidateTableScrollPane, cc.xy( 1, 1 ) );
+        
+        FWToolBar candidateToolbar = new FWToolBar( JToolBar.HORIZONTAL );
+        candidateToolbar.setBorderPainted( false );
+        candidateToolbar.setFloatable( false );
+        candidatePanelBuilder.add( candidateToolbar, cc.xy( 1, 3 ) );
+        
+        candidatePopup = new JPopupMenu();
+        
+        // add actions to toolbar and popup
+        FWAction action = new RetryCandidateAction();
+        addTabAction( action );
+        candidateToolbar.addAction( action );
+        candidatePopup.add( action );
+        
+        action = new RemoveCandidateAction();
+        addTabAction( action );
+        candidateToolbar.addAction( action );
+        candidatePopup.add( action );
+        candidateTable.getActionMap().put( action, action);
+        candidateTable.getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT).put( 
+            (KeyStroke)action.getValue(FWAction.ACCELERATOR_KEY), action );
+        
+        candidatePopup.addSeparator();
+        candidateToolbar.addSeparator();
+        
+        action = new AddToFavoritesAction();
+        addTabAction( action );
+        candidatePopup.add( action );
+        
+        action = new BrowseHostAction();
+        addTabAction( action );
+        candidateToolbar.addAction( action );
+        candidatePopup.add( action );
+        
+        action = new ChatToHostAction();
+        addTabAction( action );
+        candidateToolbar.addAction( action );
+        candidatePopup.add( action );
+        
+        BanHostActionProvider banHostActionProvider = new BanHostActionProvider();
+        BanHostActionUtils.BanHostActionMenu bhActionMenu = 
+            BanHostActionUtils.createActionMenu( 
+            banHostActionProvider );
+        
+        candidatePopup.add( bhActionMenu.menu );
+        addTabActions( bhActionMenu.actions );
+        action = BanHostActionUtils.createToolBarAction( banHostActionProvider );
+        candidateToolbar.addAction( action );
+        addTabAction( action );
+        
+        if ( DownloadPrefs.CandidateLogBufferSize.get().intValue() > 0 )
+        {
+            action = new CandidateLogAction();
+            addTabAction( action );
+            candidateToolbar.addAction( action );
+            candidatePopup.add( action );
+        }
+            
+        candidateElegantPanel = new FWElegantPanel( STLocalizer.getString("DownloadCandidates"),
+            downloadCandidatePanel );
+        return candidateElegantPanel;
+    }
+    
     private JPanel initDownloadTablePanel( DGuiSettings guiSettings, MouseHandler mouseHandler )
     {
         JPanel downloadTablePanel = new JPanel( );
-
+        
         CellConstraints cc = new CellConstraints();
         FormLayout layout = new FormLayout(
             "fill:d:grow", // columns
             "fill:d:grow, 1dlu, p"); //rows
         PanelBuilder tabBuilder = new PanelBuilder( layout, downloadTablePanel );
 
-        downloadModel = new STSWDownloadTableModel();
+        downloadModel = new STSWDownloadTableModel( downloadService );
         downloadTable = new FWTable( new FWSortedTableModel( downloadModel ) );
-        GUIUtils.updateTableFromDGuiSettings( guiSettings, downloadTable,
+        GUIUtils.updateTableFromDGuiSettings( guiSettings, downloadTable, 
             DOWNLOAD_TABLE_IDENTIFIER );
-
+        
         downloadTable.activateAllHeaderActions();
         downloadTable.setAutoResizeMode( JTable.AUTO_RESIZE_OFF );
         downloadTable.getSelectionModel().addListSelectionListener(
@@ -150,7 +316,7 @@ public class STSWDownloadTab extends FWTab
         downloadTableScrollPane = FWTable.createFWTableScrollPane( downloadTable );
         downloadTableScrollPane.addMouseListener( mouseHandler );
         tabBuilder.add( downloadTableScrollPane, cc.xy( 1, 1 ) );
-
+        
         FWToolBar fileToolbar = new FWToolBar( JToolBar.HORIZONTAL );
         fileToolbar.setBorderPainted( false );
         fileToolbar.setFloatable( false );
@@ -160,29 +326,95 @@ public class STSWDownloadTab extends FWTab
 
         FWAction startDownloadAction = new StartDownloadAction();
         addTabAction( startDownloadAction );
+        fileToolbar.addAction( startDownloadAction );
         downloadPopup.add( startDownloadAction );
 
         FWAction stopDownloadAction = new StopDownloadAction();
         addTabAction( stopDownloadAction );
+        fileToolbar.addAction( stopDownloadAction );
         downloadPopup.add( stopDownloadAction );
 
         FWAction removeDownloadAction = new RemoveDownloadAction();
         addTabAction( removeDownloadAction );
+        fileToolbar.addAction( removeDownloadAction );
         downloadPopup.add( removeDownloadAction );
         downloadTable.getActionMap().put( removeDownloadAction, removeDownloadAction );
         downloadTable.getInputMap(JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT)
             .put( (KeyStroke)removeDownloadAction.getValue(
             FWAction.ACCELERATOR_KEY), removeDownloadAction );
 
+        fileToolbar.addSeparator();
+        downloadPopup.addSeparator();
+/*
+        FWAction configureDownloadAction = new ConfigureDownloadAction();
+        addTabAction( configureDownloadAction );
+        fileToolbar.addAction( configureDownloadAction );
+        downloadPopup.add( configureDownloadAction );
+
+        FWAction searchCandidateAction = new SearchCandidatesAction();
+        addTabAction( searchCandidateAction );
+        fileToolbar.addAction( searchCandidateAction );
+        downloadPopup.add( searchCandidateAction );
+        
+        downloadPopupSpeedMenu = new JMenu( STLocalizer.getString("DownloadTab_DownloadSpeed") );
+        downloadPopup.add( downloadPopupSpeedMenu );
+
+        JMenu priorityMenu = new JMenu( STLocalizer.getString("Priority") );
+        FWAction priorityTopAction = new MoveDownloadPriorityAction(
+                    MoveDownloadPriorityAction.PRIORITY_MOVE_TO_TOP );
+        priorityMenu.add( priorityTopAction );
+        addTabAction( priorityTopAction );
+        FWAction priorityUpAction = new MoveDownloadPriorityAction( 
+                    MoveDownloadPriorityAction.PRIORITY_MOVE_UP );
+        priorityMenu.add( priorityUpAction );
+        addTabAction( priorityUpAction );
+        FWAction priorityResortAction = new MoveDownloadPriorityAction(
+                    MoveDownloadPriorityAction.PRIORITY_RESORT );
+        priorityMenu.add( priorityResortAction );
+        addTabAction( priorityResortAction );
+        FWAction priorityDownAction = new MoveDownloadPriorityAction( 
+                    MoveDownloadPriorityAction.PRIORITY_MOVE_DOWN );
+        priorityMenu.add( priorityDownAction );
+        addTabAction( priorityDownAction );
+        FWAction priorityBottomAction = new MoveDownloadPriorityAction(
+                    MoveDownloadPriorityAction.PRIORITY_MOVE_TO_BOTTOM );
+        priorityMenu.add( priorityBottomAction );
+        addTabAction( priorityBottomAction );
+        downloadPopup.add( priorityMenu );
+        
+        FWMenu orderingMenu = new FWMenu( STLocalizer.getString("DownloadTab_Strategy") );
+
+        FWAction action = new SelectStrategyAction( SelectStrategyAction.AVAILABILITY );
+        orderingMenu.addAction( action );
+        addTabAction( action );
+
+        action = new SelectStrategyAction( SelectStrategyAction.PRIORITIZE_BEGINNING );
+        orderingMenu.addAction( action );
+        addTabAction( action );
+
+        action = new SelectStrategyAction( SelectStrategyAction.PRIORITIZE_BEGINNING_END );
+        orderingMenu.addAction( action );
+        addTabAction( action );
+        
+        action = new SelectStrategyAction( SelectStrategyAction.RANDOM );
+        orderingMenu.addAction( action );
+        addTabAction( action );
+
+        downloadPopup.add( orderingMenu );
+*/
         FWAction action = new GeneratePreviewAction();
         addTabAction( action );
         fileToolbar.addAction( action );
         downloadPopup.add( action );
-
+/*
+        action = new ViewBitziTicketAction( );
+        addTabAction( action );
+        downloadPopup.add( action );
+*/        
         STFWElegantPanel elegantPanel = new STFWElegantPanel(STLocalizer.getString("DownloadFiles"), downloadTablePanel );
         return elegantPanel;
     }
-
+    
     /**
      * {@inheritDoc}
      */
@@ -199,6 +431,12 @@ public class STSWDownloadTab extends FWTab
         {
             FWTable.updateFWTableScrollPane( downloadTableScrollPane );
         }
+/*
+        if ( candidateTableScrollPane != null )
+        {
+            FWTable.updateFWTableScrollPane( candidateTableScrollPane );
+        }
+*/
     }
 
     /**
@@ -213,10 +451,12 @@ public class STSWDownloadTab extends FWTab
         int modelRow = downloadTable.translateRowIndexToModel(
             selectedRow );
         refreshTabActions();
-
-        SWDownloadFile file = swarmingMgr.getDownloadFile(
+        
+        SWDownloadFile file = downloadService.getDownloadFile(
             modelRow );
-
+        downloadOverviewPanel.updateDownloadFileInfo( file );
+        transfersPanel.updateDownloadFile( file );
+        
         if ( file != null )
         {
             ResearchSetting researchSetting = file.getResearchSetting();
@@ -224,10 +464,25 @@ public class STSWDownloadTab extends FWTab
             {
                 Object[] args =
                 {
-                    new Integer( researchSetting.getSearchHitCount() ),
-                    new Integer( researchSetting.getSearchProgress() )
-                };
-
+                    Integer.valueOf( researchSetting.getSearchHitCount() ),
+                    Integer.valueOf( researchSetting.getSearchProgress() )
+                };                    
+                
+                overviewElegantPanel.setTitle( 
+                    STLocalizer.getString( "DownloadTab_DownloadOverview" ) + " " +
+                    STLocalizer.getFormatedString( "CandidatesSearchingExt", args  ) );
+                transfersElegantPanel.setTitle( 
+                    STLocalizer.getString( "DownloadTab_DownloadTransfers" ) + " " +
+                    STLocalizer.getFormatedString( "CandidatesSearchingExt", args  ) );
+                candidateElegantPanel.setTitle( 
+                    STLocalizer.getString( "DownloadCandidates" ) + " " +
+                    STLocalizer.getFormatedString( "CandidatesSearchingExt", args  ) );
+            }
+            else
+            {
+                overviewElegantPanel.setTitle( STLocalizer.getString( "DownloadTab_DownloadOverview" ) );
+                transfersElegantPanel.setTitle( STLocalizer.getString( "DownloadTab_DownloadTransfers" ) );
+                candidateElegantPanel.setTitle( STLocalizer.getString( "DownloadCandidates" ) );
             }
         }
     }
@@ -240,7 +495,7 @@ public class STSWDownloadTab extends FWTab
         }
         int[] viewIndices = downloadTable.getSelectedRows();
         int[] modelIndices = downloadTable.convertRowIndicesToModel( viewIndices );
-        SWDownloadFile[] files = swarmingMgr.getDownloadFilesAt( modelIndices );
+        SWDownloadFile[] files = downloadService.getDownloadFilesAt( modelIndices );
         return files;
     }
 
@@ -252,8 +507,39 @@ public class STSWDownloadTab extends FWTab
             return null;
         }
         int modelIndex = downloadTable.translateRowIndexToModel( viewIndex );
-        SWDownloadFile file = swarmingMgr.getDownloadFile( modelIndex );
+        SWDownloadFile file = downloadService.getDownloadFile( modelIndex );
         return file;
+    }
+
+    private SWDownloadCandidate[] getSelectedDownloadCandidates()
+    {
+        if ( candidateTable.getSelectedRowCount() == 0 )
+        {
+            return EMPTY_DOWNLOADCANDIDATE_ARRAY;
+        }
+        int[] viewIndices = candidateTable.getSelectedRows();
+        int[] modelIndices = candidateTable.convertRowIndicesToModel( viewIndices );
+        SWDownloadCandidate[] candidates = new SWDownloadCandidate[ modelIndices.length ];
+        SWDownloadFile downloadFile = candidateModel.getDownloadFile();
+        for ( int i = 0; i < candidates.length; i++ )
+        {
+            candidates[i] = downloadFile.getCandidate( modelIndices[i] );
+        }
+        return candidates;
+    }
+
+    private SWDownloadCandidate getSelectedDownloadCandidate()
+    {
+        int viewIndex = candidateTable.getSelectedRow();
+        int modelIndex = candidateTable.translateRowIndexToModel( viewIndex );
+        if ( modelIndex < 0 )
+        {
+            return null;
+        }
+
+        SWDownloadFile downloadFile = candidateModel.getDownloadFile();
+        SWDownloadCandidate candidate = downloadFile.getCandidate( modelIndex );
+        return candidate;
     }
 
     //////////////////////////////////////////////////////////////////////////
@@ -269,6 +555,11 @@ public class STSWDownloadTab extends FWTab
         super.appendDGuiSettings( dSettings );
         DTable dTable = GUIUtils.createDTable( downloadTable, DOWNLOAD_TABLE_IDENTIFIER );
         dSettings.getTableList().getTableList().add( dTable );
+
+        dTable = GUIUtils.createDTable( candidateTable, CANDIDATE_TABLE_IDENTIFIER );
+        dSettings.getTableList().getTableList().add( dTable );
+        
+        transfersPanel.appendDGuiSettings( dSettings );
     }
 
 
@@ -290,6 +581,20 @@ public class STSWDownloadTab extends FWTab
             catch ( Exception exp )
             {
                 NLogger.error( DownloadSelectionHandler.class, exp, exp );
+            }
+        }
+    }
+
+    /**
+     * Selection listener for download candidate table.
+     */
+    class CandidateSelectionHandler implements ListSelectionListener
+    {
+        public void valueChanged( ListSelectionEvent e )
+        {
+            if ( !e.getValueIsAdjusting() )
+            {
+                refreshTabActions();
             }
         }
     }
@@ -333,7 +638,45 @@ public class STSWDownloadTab extends FWTab
             if ( source == downloadTable || source == downloadTableScrollPane )
             {
                 refreshTabActions();
+                prepareDownloadPopup();
                 downloadPopup.show( source, x, y );
+            }
+            else if ( source == candidateTable || source == candidateTableScrollPane )
+            {
+                candidatePopup.show( source, x, y );
+            }
+        }
+        
+        public void prepareDownloadPopup()
+        {
+            downloadPopupSpeedMenu.removeAll();
+            if ( downloadTable.getSelectedRowCount() > 0 )
+            {
+                downloadPopupSpeedMenu.setEnabled( true );
+            }
+            else
+            {
+                downloadPopupSpeedMenu.setEnabled( false );
+                return;
+            }
+            
+            FWAction action;
+            int downloadBw = BandwidthPrefs.MaxDownloadBandwidth.get().intValue();
+            if ( downloadBw > BandwidthPrefs.MaxTotalBandwidth.get().intValue() )
+            {
+                downloadBw = BandwidthPrefs.MaxTotalBandwidth.get().intValue();
+            }
+            if ( downloadBw >= Integer.MAX_VALUE )
+            {
+                downloadBw = (int)(500 * NumberFormatUtils.ONE_KB);
+            }
+            double downloadBwFraction = downloadBw / 10.0;
+            action = new SetDownloadSpeedAction( Integer.MAX_VALUE );
+            downloadPopupSpeedMenu.add( action );
+            for ( int i = 10; i > 0; i-- )
+            {
+                action = new SetDownloadSpeedAction( (int)(downloadBwFraction * i) );
+                downloadPopupSpeedMenu.add( action );
             }
         }
     }
@@ -427,7 +770,7 @@ public class STSWDownloadTab extends FWTab
                     }
                 }
             };
-            ThreadPool.getInstance().addJob(runner, "StopDownloadFiles" );
+            Environment.getInstance().executeOnThreadPool(runner, "StopDownloadFiles" );
         }
 
         /**
@@ -451,51 +794,43 @@ public class STSWDownloadTab extends FWTab
         }
     }
 
-    class GeneratePreviewAction extends FWAction
+    class ConfigureDownloadAction extends FWAction
     {
-        GeneratePreviewAction ( )
+        ConfigureDownloadAction()
         {
-            super( STLocalizer.getString( "DownloadTab_PreviewDownload" ),
-                GUIRegistry.getInstance().getPlafIconPack().getIcon("Download.Preview"),
-                STLocalizer.getString( "DownloadTab_TTTPreviewDownload" ) );
+            super( STLocalizer.getString( "ConfigureDownload" ),
+                GUIRegistry.getInstance().getPlafIconPack().getIcon("Download.ConfigureDownload"),
+                STLocalizer.getString( "TTTConfigureDownload" ) );
             refreshActionState();
         }
 
         public void actionPerformed( ActionEvent e )
         {
-            try
+            
+            if ( downloadTable.getSelectedRowCount() != 1 )
             {
-                final SWDownloadFile file = getSelectedDownloadFile();
-                if ( file == null ) return;
-                Runnable runner = new Runnable()
-                {
-                    public void run()
-                    {
-                        try {
-                            File previewFile = file.getPreviewFile();
-                            Desktop.open(previewFile);
-                        } catch (DesktopException e) {
-                            STLibrary.getInstance().fireMessageBox(e.getMessage(), STLocalizer.getString("Error"), JOptionPane.ERROR_MESSAGE);                            
-                        }
-
-                        /*
-                        try
-                        {
-                            File previewFile = file.getPreviewFile();
-                            SystemShellExecute.launchFile( previewFile );
-                        }
-                        catch ( Throwable th )
-                        {
-                            NLogger.error( GeneratePreviewAction.class, th, th);
-                        }
-                        */
-                    }
-                };
-                ThreadPool.getInstance().addJob(runner, "GenerateDownloadPreview" );
+                setEnabled( false);
+                return;
             }
-            catch ( Throwable th )
+            int viewIdx = downloadTable.getSelectedRow();
+            int modelIdx = downloadTable.translateRowIndexToModel( viewIdx );
+            SWDownloadFile dfile = downloadService.getDownloadFile( modelIdx );
+
+            if ( dfile != null )
             {
-                NLogger.error( GeneratePreviewAction.class, th, th);
+                if ( dfile.isDownloadInProgress() )
+                {
+                    JOptionPane.showMessageDialog( STSWDownloadTab.this,
+                        STLocalizer.getString( "NoConfigDownloadInProgress" ),
+                        STLocalizer.getString( "DownloadInProgress" ),
+                        JOptionPane.WARNING_MESSAGE );
+                    return;
+                }
+                int oldStatus = dfile.getStatus();
+                dfile.stopDownload();
+                DownloadConfigDialog dialog = new DownloadConfigDialog( dfile );
+                dialog.setVisible( true ); 
+                dfile.setStatus( oldStatus );
             }
         }
 
@@ -505,25 +840,22 @@ public class STSWDownloadTab extends FWTab
         @Override
         public void refreshActionState()
         {
-            try
+            if ( downloadTable.getSelectedRowCount() != 1 )
             {
-                SWDownloadFile file = getSelectedDownloadFile();
-                if ( file == null )
-                {
-                    // no file, no do
-                    setEnabled ( false );
-                }
-                else
-                {
-                    setEnabled( file.isPreviewPossible() );
-                }
+                setEnabled( false );
+                return;
             }
-            catch ( Throwable th )
+            SWDownloadFile file = getSelectedDownloadFile();            
+            if ( file == null || file.isFileCompletedOrMoved() )
             {
-                NLogger.error( GeneratePreviewAction.class, th, th);
+                setEnabled( false );
+            }
+            else
+            {
+                setEnabled( true );
             }
         }
-    }    
+    }
 
     /**
      * Removes a download from the list.
@@ -534,7 +866,7 @@ public class STSWDownloadTab extends FWTab
         {
             super( STLocalizer.getString( "RemoveDownload" ),
                 GUIRegistry.getInstance().getPlafIconPack().getIcon("Download.RemoveDownload"),
-                STLocalizer.getString( "TTTRemoveDownload" ), null,
+                STLocalizer.getString( "TTTRemoveDownload" ), null, 
                 KeyStroke.getKeyStroke( KeyEvent.VK_DELETE, 0 ) );
             refreshActionState();
         }
@@ -571,7 +903,7 @@ public class STSWDownloadTab extends FWTab
                 }
             }
 
-            Integer warningSize = new Integer( warningFiles.size() );
+            Integer warningSize = Integer.valueOf( warningFiles.size() );
             for ( int i = 0; i < warningSize.intValue(); i++ )
             {
                 SWDownloadFile file = warningFiles.get( i );
@@ -583,7 +915,7 @@ public class STSWDownloadTab extends FWTab
                 };
                 Object[] titleParams = new Object[]
                 {
-                    new Integer( i + 1 ),
+                    Integer.valueOf( i + 1 ),
                     warningSize
                 };
 
@@ -607,7 +939,7 @@ public class STSWDownloadTab extends FWTab
                     };
                 }
 
-                int choice = JOptionPane.showOptionDialog(
+                int choice = JOptionPane.showOptionDialog( 
                     GUIRegistry.getInstance().getMainFrame(),
                     STLocalizer.getFormatedString( "RemoveDownloadWarning", warningParams),
                     STLocalizer.getFormatedString( "RemoveDownloadTitle", titleParams ),
@@ -639,7 +971,7 @@ public class STSWDownloadTab extends FWTab
                     {
                         try
                         {
-                            swarmingMgr.removeDownloadFiles( filesToRemove );
+                            downloadService.removeDownloadFiles( filesToRemove );
                         }
                         catch ( Throwable th )
                         {
@@ -647,7 +979,7 @@ public class STSWDownloadTab extends FWTab
                         }
                     }
                 };
-                ThreadPool.getInstance().addJob(runner, "RemoveDownloadFiles" );
+                Environment.getInstance().executeOnThreadPool(runner, "RemoveDownloadFiles" );
                 downloadTable.getSelectionModel().clearSelection();
             }
         }
@@ -667,6 +999,834 @@ public class STSWDownloadTab extends FWTab
             {
                 setEnabled( true );
             }
+        }
+    }
+    
+    /**
+     * 
+     */
+    class SetDownloadSpeedAction extends FWAction
+    {
+        private int speedInBytes;
+
+        SetDownloadSpeedAction( int speedInBytes )
+        {
+            super( );
+            this.speedInBytes = speedInBytes;
+            String name;
+            if ( speedInBytes >= Integer.MAX_VALUE )
+            {
+                name = STLocalizer.getString( "DownloadTab_NoLimit" ) + " (" +
+                    STLocalizer.getDecimalFormatSymbols().getInfinity() + ")";
+            }
+            else
+            {
+                name = NumberFormatUtils.formatSignificantByteSize( speedInBytes ) 
+                    + STLocalizer.getString( "PerSec" );
+            }
+            setName( name );
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            SWDownloadFile[] files = getSelectedDownloadFiles();
+            for ( int i = 0; i < files.length; i++ )
+            {
+                if ( files[i] != null )
+                {
+                    files[i].setDownloadThrottlingRate( speedInBytes );
+                }
+            }
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+        }
+    }
+
+    /**
+     * Moves a download in the list.
+     */
+    class MoveDownloadPriorityAction extends FWAction
+    {
+        private static final short PRIORITY_MOVE_TO_TOP =
+            SwarmingManager.PRIORITY_MOVE_TO_TOP;
+        private static final short PRIORITY_MOVE_UP =
+            SwarmingManager.PRIORITY_MOVE_UP;
+        private static final short PRIORITY_MOVE_DOWN =
+            SwarmingManager.PRIORITY_MOVE_DOWN;
+        private static final short PRIORITY_MOVE_TO_BOTTOM =
+            SwarmingManager.PRIORITY_MOVE_TO_BOTTOM;
+        private static final short PRIORITY_RESORT = 100;
+        private short moveDirection;
+
+        MoveDownloadPriorityAction( short type )
+        {
+            super( );
+            moveDirection = type;
+            switch( type )
+            {
+                case PRIORITY_MOVE_TO_TOP:
+                    setName( STLocalizer.getString( "MoveToTop" ) );
+                    setToolTipText( STLocalizer.getString( "TTTMoveToTop" ) );
+                    break;
+                case PRIORITY_MOVE_UP:
+                    setName( STLocalizer.getString( "MoveUp" ) );
+                    setToolTipText( STLocalizer.getString( "TTTMoveUp" ) );
+                    break;
+                case PRIORITY_MOVE_DOWN:
+                    setName( STLocalizer.getString( "MoveDown" ) );
+                    setToolTipText( STLocalizer.getString( "TTTMoveDown" ) );
+                    break;
+                case PRIORITY_MOVE_TO_BOTTOM:
+                    setName( STLocalizer.getString( "MoveToBottom" ) );
+                    setToolTipText( STLocalizer.getString( "TTTMoveToBottom" ) );
+                    break;
+                case PRIORITY_RESORT:
+                    setName( STLocalizer.getString( "Resort" ) );
+                    setToolTipText( STLocalizer.getString( "TTTResort" ) );
+                    break;
+            }
+            setupIcons();
+			refreshActionState();
+        }
+        
+        private void setupIcons()
+        {
+            IconPack iconPack = GUIRegistry.getInstance().getPlafIconPack();
+            switch( moveDirection )
+            {
+                case PRIORITY_MOVE_TO_TOP:
+                    setSmallIcon( iconPack.getIcon( "Download.PriorityTop") );
+                    break;
+                case PRIORITY_MOVE_UP:
+                    setSmallIcon( iconPack.getIcon( "Download.PriorityUp") );
+                    break;
+                case PRIORITY_MOVE_DOWN:
+                    setSmallIcon( iconPack.getIcon( "Download.PriorityDown") );
+                    break;
+                case PRIORITY_MOVE_TO_BOTTOM:
+                    setSmallIcon( iconPack.getIcon( "Download.PriorityBottom") );
+                    break;
+                case PRIORITY_RESORT:
+                    setSmallIcon( iconPack.getIcon( "Download.PriorityResort") );
+                    break;
+            }
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            try
+            {
+                if ( moveDirection == PRIORITY_RESORT )
+                {
+                    performPriorityResort();
+                }
+                else
+                {
+                    performPriorityUpdate();
+                }
+            }
+            catch (Throwable th)
+            {
+                NLogger.error( MoveDownloadPriorityAction.class, th, th );
+            }
+        }
+        
+        /**
+         * 
+         */
+        private void performPriorityResort()
+        {
+            int[] viewIndices = new int[downloadTable.getRowCount()];
+            for ( int i = 0; i < viewIndices.length; i++ )
+            {
+                viewIndices[i] = i;
+            }
+            final int[] modelIndices = downloadTable.convertRowIndicesToModel( 
+                viewIndices );
+            Runnable runner = new Runnable()
+            {
+                public void run()
+                {
+                    try
+                    {
+                        SWDownloadFile[] files = downloadService.getDownloadFilesAt(
+                            modelIndices );
+                        downloadService.updateDownloadFilePriorities( files );
+                    }
+                    catch (Throwable th)
+                    {
+                        NLogger.error( MoveDownloadPriorityAction.class, th, th );
+                    }
+                }
+            };
+            Environment.getInstance().executeOnThreadPool( runner, "ResortPriority" );
+        }
+
+        /**
+         * 
+         */
+        private void performPriorityUpdate()
+        {
+            final SWDownloadFile[] files = getSelectedDownloadFiles();
+            Runnable runner = new Runnable()
+            {
+                public void run()
+                {
+                    try
+                    {
+                        for ( int i = 0; i < files.length; i++ )
+                        {
+                            if ( files[i] != null )
+                            {
+                                downloadService.moveDownloadFilePriority( files[i],
+                                    moveDirection );
+                            }
+                        }
+                    }
+                    catch (Throwable th)
+                    {
+                        NLogger.error( MoveDownloadPriorityAction.class, th, th );
+                    }
+                }
+            };
+            Environment.getInstance().executeOnThreadPool( runner, "UpdatePriority" );
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+            if ( moveDirection == PRIORITY_RESORT )
+            {
+                setEnabled( true );
+            }
+            else
+            {
+                if ( downloadTable.getSelectedRowCount() > 0 )
+                {
+                    setEnabled( true );
+                }
+                else
+                {
+                    setEnabled( false );
+                }
+            }
+        }
+    }
+    
+    class SelectStrategyAction extends FWToggleAction
+    {
+        private static final short AVAILABILITY = 0;
+        private static final short PRIORITIZE_BEGINNING = 1;
+        private static final short PRIORITIZE_BEGINNING_END = 2;
+        private static final short RANDOM = 3;
+        private short strategy;
+
+        SelectStrategyAction( short strategy )
+        {
+            super( );
+            this.strategy = strategy;
+            switch( strategy )
+            {
+                case AVAILABILITY:
+                    setName( STLocalizer.getString( "DownloadTab_StrategyAvailability" ) );
+                    break;
+                case PRIORITIZE_BEGINNING:
+                    setName( STLocalizer.getString( "DownloadTab_StrategyBeginning" ) );
+                    break;
+                case PRIORITIZE_BEGINNING_END:
+                    setName( STLocalizer.getString( "DownloadTab_StrategyBeginningEnd" ) );
+                    break;
+                case RANDOM:
+                    setName( STLocalizer.getString( "DownloadTab_StrategyRandom" ) );
+                    break;
+            }
+            refreshActionState();
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            ScopeSelectionStrategy selectionStrategy;
+            switch( strategy )
+            {
+                case AVAILABILITY:
+                    selectionStrategy = ScopeSelectionStrategyProvider.getAvailBeginRandSelectionStrategy();
+                    break;
+                case PRIORITIZE_BEGINNING:
+                    selectionStrategy = ScopeSelectionStrategyProvider.getBeginAvailRandSelectionStrategy();
+                    break;
+                case PRIORITIZE_BEGINNING_END:
+                    selectionStrategy = ScopeSelectionStrategyProvider.getBeginEndAvailRandSelectionStrategy();
+                    break;
+                default:
+                    selectionStrategy = ScopeSelectionStrategyProvider.getRandomSelectionStrategy();
+                    break;
+            }
+            SWDownloadFile[] files = getSelectedDownloadFiles();
+            for ( int i = 0; i < files.length; i++ )
+            {
+                if ( files[i] == null )
+                {
+                    continue;
+                }
+                files[i].getMemoryFile().setScopeSelectionStrategy( selectionStrategy );
+            }
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+            if ( downloadTable.getSelectedRowCount() == 1 )
+            {
+                setEnabled( true );
+                SWDownloadFile file = getSelectedDownloadFile();
+                if ( file == null )
+                {
+                    setSelected(false);
+                    return;
+                }
+                ScopeSelectionStrategy curStrat = file.getMemoryFile().getScopeSelectionStrategy();
+                switch( strategy )
+                {
+                    case AVAILABILITY:
+                        setSelected( curStrat instanceof AvailBeginRandSelectionStrategy );
+                        break;
+                    case PRIORITIZE_BEGINNING:
+                        setSelected( curStrat instanceof BeginAvailRandSelectionStrategy );
+                        break;
+                    case PRIORITIZE_BEGINNING_END:
+                        setSelected( curStrat instanceof BeginEndAvailRandSelectionStrategy );
+                        break;
+                    default:
+                        setSelected( curStrat instanceof RandomScopeSelectionStrategy );
+                        break;
+                }
+            }
+            else
+            {
+                setEnabled( false );
+            }
+        }
+    }
+
+    class GeneratePreviewAction extends FWAction
+    {
+        GeneratePreviewAction ( )
+        {
+            super( STLocalizer.getString( "DownloadTab_PreviewDownload" ),
+                GUIRegistry.getInstance().getPlafIconPack().getIcon("Download.Preview"),
+                STLocalizer.getString( "DownloadTab_TTTPreviewDownload" ) );
+            refreshActionState();
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            try
+            {
+                final SWDownloadFile file = getSelectedDownloadFile();
+                if ( file == null ) return;
+                Runnable runner = new Runnable()
+                {
+                    public void run()
+                    {
+                        try {
+                            File previewFile = file.getPreviewFile();
+                            Desktop.open(previewFile);
+                        } catch (DesktopException e) {
+                            STLibrary.getInstance().fireMessageBox(e.getMessage(), STLocalizer.getString("Error"), JOptionPane.ERROR_MESSAGE);
+                        }
+                        /*
+                        try
+                        {
+                            File previewFile = file.getPreviewFile();
+                            SystemShellExecute.launchFile( previewFile );
+                        }
+                        catch ( Throwable th )
+                        {
+                            NLogger.error( GeneratePreviewAction.class, th, th);
+                        }
+                        */
+                    }
+                };
+                Environment.getInstance().executeOnThreadPool(runner, "GenerateDownloadPreview" );
+            }
+            catch ( Throwable th )
+            {
+                NLogger.error( GeneratePreviewAction.class, th, th);
+            }
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+            try
+            {
+                SWDownloadFile file = getSelectedDownloadFile();
+                if ( file == null )
+                {
+                    // no file, no do
+                    setEnabled ( false );
+                }
+                else
+                {
+                    setEnabled( file.isPreviewPossible() );
+                }
+            }
+            catch ( Throwable th )
+            {
+                NLogger.error( GeneratePreviewAction.class, th, th);
+            }
+        }
+    }    
+
+    private class ViewBitziTicketAction extends FWAction
+    {
+        public ViewBitziTicketAction()
+        {
+            super( STLocalizer.getString( "ViewBitziTicket" ),
+                GUIRegistry.getInstance().getPlafIconPack().getIcon("Download.ViewBitzi"),
+                STLocalizer.getString( "TTTViewBitziTicket" ) );
+            refreshActionState();
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            SWDownloadFile file = getSelectedDownloadFile();
+            if ( file == null )
+            {
+                return;
+            }
+            URN urn = file.getFileURN();
+            if ( urn == null )
+            {
+                return;
+            }
+            String url = URLUtil.buildBitziLookupURL( urn );
+            try
+            {
+                BrowserLauncher.openURL( url );
+            }
+            catch ( IOException exp )
+            {
+                NLogger.warn( ViewBitziTicketAction.class, exp, exp);
+                Object[] dialogOptions = new Object[]
+                {
+                    STLocalizer.getString( "Yes" ),
+                    STLocalizer.getString( "No" )
+                };
+
+                int choice = JOptionPane.showOptionDialog( STSWDownloadTab.this,
+                    STLocalizer.getString( "FailedToLaunchBrowserURLInClipboard" ),
+                    STLocalizer.getString( "FailedToLaunchBrowser" ),
+                    JOptionPane.YES_NO_OPTION, JOptionPane.WARNING_MESSAGE, null,
+                    dialogOptions, STLocalizer.getString( "Yes" ) );
+                if ( choice == 0 )
+                {
+                    Toolkit.getDefaultToolkit().getSystemClipboard().setContents(
+                        new StringSelection( url ), null);
+                }
+            }
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+            if ( downloadTable.getSelectedRowCount() == 1 )
+            {
+                setEnabled( true );
+            }
+            else
+            {
+                setEnabled( false );
+            }
+        }
+    }
+
+    /**
+     * Removes a candidate from the list.
+     */
+    class RemoveCandidateAction extends FWAction
+    {
+        RemoveCandidateAction()
+        {
+            super( STLocalizer.getString( "RemoveCandidate" ),
+                GUIRegistry.getInstance().getPlafIconPack().getIcon("Download.RemoveCandidate"),
+                STLocalizer.getString( "TTTRemoveCandidate" ), null,
+                KeyStroke.getKeyStroke( KeyEvent.VK_DELETE, 0 ) );
+            refreshActionState();
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            final SWDownloadCandidate[] candidates = getSelectedDownloadCandidates();
+            final SWDownloadFile file = candidateModel.getDownloadFile();
+            Runnable runner = new Runnable()
+            {
+                public void run()
+                {
+                    try
+                    {
+                        for ( int i = 0; i < candidates.length; i++ )
+                        {
+                            file.stopDownload( candidates[i] );
+                            file.markCandidateIgnored( candidates[i], "CandidateStatusReason_ByUser" );
+                        }
+                        refreshActionState();
+                    }
+                    catch ( Throwable th )
+                    {
+                        NLogger.error( RemoveCandidateAction.class, th, th);
+                    }
+                }
+            };
+            Environment.getInstance().executeOnThreadPool(runner, "RemoveDownloadCandidate" );
+
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+            int downloadRow = downloadTable.getSelectedRow();
+            int candidateRow = candidateTable.getSelectedRow();
+            if ( downloadRow < 0 || candidateRow < 0 )
+            {
+                setEnabled( false );
+            }
+            else
+            {
+                setEnabled( true );
+            }
+        }
+    }
+
+    /**
+     * Schedules the candidate to retry a connection for download.
+     */
+    class RetryCandidateAction extends FWAction
+    {
+        RetryCandidateAction()
+        {
+            super( STLocalizer.getString( "RetryCandidate" ),
+                GUIRegistry.getInstance().getPlafIconPack().getIcon("Download.ReconnectHost"),
+                STLocalizer.getString( "TTTRetryCandidate" ) );
+            refreshActionState();
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            SWDownloadCandidate[] candidates = getSelectedDownloadCandidates();
+            for ( int i = 0; i < candidates.length; i++ )
+            {
+                if ( candidates[i] != null )
+                {
+                    candidates[i].manualConnectionRetry();
+                }
+            }
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+            int downloadRow = downloadTable.getSelectedRow();
+            int candidateRow = candidateTable.getSelectedRow();
+            if ( downloadRow < 0 || candidateRow < 0 )
+            {
+                setEnabled( false );
+            }
+            else
+            {
+                setEnabled( true );
+            }
+        }
+    }
+
+    private class ChatToHostAction extends FWAction
+    {
+        public ChatToHostAction()
+        {
+            super( STLocalizer.getString( "ChatToHost" ),
+                GUIRegistry.getInstance().getPlafIconPack().getIcon("Download.Chat"),
+                STLocalizer.getString( "TTTChatToHost" ) );
+            refreshActionState();
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            SWDownloadCandidate candidate = getSelectedDownloadCandidate();
+            if ( candidate == null )
+            {
+                return;
+            }
+            if ( !candidate.isChatSupported() )
+            {
+                return;
+            }
+            GUIActionPerformer.chatToHost( candidate.getHostAddress() );
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+            if ( candidateTable.getSelectedRowCount() == 1 )
+            {
+                SWDownloadCandidate candidate = getSelectedDownloadCandidate();
+                if ( candidate != null && candidate.isChatSupported() )
+                {
+                    setEnabled( true );
+                    return;
+                }
+            }
+            setEnabled( false );
+        }
+    }
+
+    private class BrowseHostAction extends FWAction
+    {
+        public BrowseHostAction()
+        {
+            super( STLocalizer.getString( "BrowseHost" ),
+                GUIRegistry.getInstance().getPlafIconPack().getIcon("Download.BrowseHost"),
+                STLocalizer.getString( "TTTBrowseHost" ) );
+            refreshActionState();
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            SWDownloadCandidate candidate = getSelectedDownloadCandidate();
+            if ( candidate == null )
+            {
+                return;
+            }
+            GUIActionPerformer.browseHost( candidate.getHostAddress() );
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+            if ( candidateTable.getSelectedRowCount() == 1 )
+            {
+                SWDownloadCandidate candidate = getSelectedDownloadCandidate();
+                if ( candidate != null )
+                {
+                    setEnabled( true );
+                    return;
+                }
+            }
+            setEnabled( false );
+        }
+    }
+    
+    private final class BanHostActionProvider implements BanHostActionUtils.BanHostActionProvider
+    {
+        public DestAddress[] getBanHostAddresses()
+        {
+            SWDownloadCandidate[] candidates = getSelectedDownloadCandidates();
+            SWDownloadFile file = candidateModel.getDownloadFile();
+            final DestAddress[] addresses = new DestAddress[candidates.length];
+            for (int i = 0; i < candidates.length; i++)
+            {
+                file.stopDownload( candidates[i] );
+                file.markCandidateIgnored( candidates[i], "CandidateStatusReason_ByUser" );
+                addresses[ i ] = candidates[i].getHostAddress();
+            }
+            return addresses;
+        }
+
+        public boolean isBanHostActionEnabled( boolean allowMultipleAddresses )
+        {
+            int downloadRow = downloadTable.getSelectedRow();
+            int candidateRow = candidateTable.getSelectedRow();
+            if ( downloadRow < 0 || candidateRow < 0 ||
+                 ( !allowMultipleAddresses && candidateTable.getSelectedRowCount() > 1 ) )
+            {
+                return false;
+            }
+            else
+            {
+                return true;
+            }
+        }
+    }
+    
+    private class AddToFavoritesAction extends FWAction
+    {
+        public AddToFavoritesAction()
+        {
+            super( STLocalizer.getString( "AddToFavorites" ),
+                GUIRegistry.getInstance().getPlafIconPack().getIcon( "Download.FavoriteHost" ),
+                STLocalizer.getString( "TTTAddToFavorites" ) );
+            refreshActionState();
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            SWDownloadCandidate[] candidates = getSelectedDownloadCandidates();
+            
+            DestAddress[] addresses = new DestAddress[candidates.length];
+            for (int i = 0; i < candidates.length; i++)
+            {
+                addresses[ i ] = candidates[i].getHostAddress();
+            }
+            GUIActionPerformer.addHostsToFavorites( addresses );            
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+            int downloadRow = downloadTable.getSelectedRow();
+            int candidateRow = candidateTable.getSelectedRow();
+            if ( downloadRow < 0 || candidateRow < 0 )
+            {
+                setEnabled( false );
+            }
+            else
+            {
+                setEnabled( true );
+            }
+        }
+    }
+
+
+    /**
+     * Manually search for new candidates.
+     */
+    private class SearchCandidatesAction extends FWAction
+    {
+        public SearchCandidatesAction()
+        {
+            super( STLocalizer.getString( "Search" ),
+                GUIRegistry.getInstance().getPlafIconPack().getIcon("Download.Search"),
+                STLocalizer.getString( "TTTSearchCandidates" ) );
+            refreshActionState();
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            try
+            {
+                int viewIdx = downloadTable.getSelectedRow();
+                int modelIdx = downloadTable.translateRowIndexToModel( viewIdx );
+                SWDownloadFile file = downloadService.getDownloadFile( modelIdx );
+                file.startSearchForCandidates();
+            }
+            catch ( Throwable th )
+            {
+                NLogger.error( SearchCandidatesAction.class, th, th );
+            }
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+            if ( downloadTable.getSelectedRowCount() != 1 )
+            {
+                setEnabled( false);
+                return;
+            }
+            int viewIdx = downloadTable.getSelectedRow();
+            int modelIdx = downloadTable.translateRowIndexToModel( viewIdx );
+            SWDownloadFile file = downloadService.getDownloadFile( modelIdx );
+
+            if ( file == null )
+            {
+                setEnabled( false );
+            }
+            else
+            {
+                if ( file.getResearchSetting().isSearchRunning() ||
+                     file.isFileCompletedOrMoved() )
+                {
+                    setEnabled( false );
+                }
+                else
+                {
+                    setEnabled( true );
+                }
+            }
+        }
+    }
+    
+    private class CandidateLogAction extends FWAction
+    {
+        public CandidateLogAction()
+        {
+            super( STLocalizer.getString( "DownloadTab_ViewLog" ),
+                null,
+                STLocalizer.getString( "DownloadTab_TTTViewLog" ) );
+            refreshActionState();
+        }
+
+        public void actionPerformed( ActionEvent e )
+        {
+            try
+            {
+                SWDownloadCandidate candidate = getSelectedDownloadCandidate();
+                LogBuffer buffer = downloadService.getCandidateLogBuffer();
+                
+                Collection<LogRecord> logRecords = buffer.getLogRecords( candidate );
+                if ( logRecords != null )
+                {
+                    LogBufferDialog dialog = new LogBufferDialog( logRecords );
+                    dialog.setVisible( true );
+                }
+            }
+            catch ( Throwable th )
+            {
+                NLogger.error( CandidateLogAction.class, th, th );
+            }
+        }
+
+        /**
+         * {@inheritDoc}
+         */
+        @Override
+        public void refreshActionState()
+        {
+            if ( candidateTable.getSelectedRowCount() == 1 )
+            {
+                SWDownloadCandidate candidate = getSelectedDownloadCandidate();
+                if ( candidate != null )
+                {
+                    setEnabled( true );
+                    return;
+                }
+            }
+            setEnabled( false );
         }
     }
 }
